[gd_scene load_steps=3 format=3 uid="uid://bqxc8fusk3jye"]

[ext_resource type="StyleBox" uid="uid://26x6q2wph1tf" path="res://assets/fun_arg_style.tres" id="1_scbcx"]
[ext_resource type="Script" path="res://Trees/arg_edit_container.gd" id="2_gtdqn"]

[node name="ArgEditionContainer" type="PanelContainer"]
theme_override_styles/panel = ExtResource("1_scbcx")
script = ExtResource("2_gtdqn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ArgEdit" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameEdit" type="LineEdit" parent="MarginContainer/ArgEdit"]
unique_name_in_owner = true
layout_mode = 2
text = "arg1"
placeholder_text = "Arg name"

[node name="DefaultValEdit" type="LineEdit" parent="MarginContainer/ArgEdit"]
unique_name_in_owner = true
visible = false
layout_mode = 2
placeholder_text = "Default Val"

[node name="Typeselect" type="OptionButton" parent="MarginContainer/ArgEdit"]
unique_name_in_owner = true
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "ANY"
popup/item_0/id = 0

[connection signal="item_selected" from="MarginContainer/ArgEdit/Typeselect" to="." method="_on_typeselect_item_selected"]
